--- a/spec/vcr_cassettes/FlickrService/total_pages/returns_the_total_number_of_pages_on_users_photostream.yml
+++ b/spec/vcr_cassettes/FlickrService/total_pages/returns_the_total_number_of_pages_on_users_photostream.yml
@@ -5,60 +5,6 @@ http_interactions:
     uri: https://api.flickr.com/services/rest/
     body:
       encoding: US-ASCII
-      string: method=flickr.reflection.getMethods&format=json&nojsoncallback=1
-    headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-      User-Agent:
-      - Flickr/2.0.2 (+https://github.com/cyclotron3k/flickr)
-      Authorization:
-      - OAuth realm="https://api.flickr.com/services/rest/", oauth_consumer_key="<HIDDEN>",
-        oauth_nonce="<HIDDEN>", oauth_signature="<HIDDEN>",
-        oauth_signature_method="PLAINTEXT", oauth_timestamp="1652927251", oauth_token="",
-        oauth_version="1.0"
-      Content-Type:
-      - application/x-www-form-urlencoded
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Content-Type:
-      - application/json
-      Transfer-Encoding:
-      - chunked
-      Connection:
-      - keep-alive
-      Date:
-      - Thu, 19 May 2022 02:27:31 GMT
-      Server:
-      - Apache/2.4.53 (Ubuntu)
-      Set-Cookie:
-      - ccc=%7B%22needsConsent%22%3Afalse%2C%22managed%22%3A0%2C%22changed%22%3A0%2C%22info%22%3A%7B%22cookieBlock%22%3A%7B%22level%22%3A0%2C%22blockRan%22%3A0%7D%7D%7D;
-        expires=Sat, 18-Jun-2022 02:27:31 GMT; Max-Age=2592000; path=/; domain=.flickr.com
-      X-Content-Type-Options:
-      - nosniff
-      X-Frame-Options:
-      - SAMEORIGIN
-      X-Cache:
-      - Miss from cloudfront
-      Via:
-      - 1.1 19e58616339f974c22a3a07f8f637718.cloudfront.net (CloudFront)
-      X-Amz-Cf-Pop:
-      - EWR53-P1
-      X-Amz-Cf-Id:
-      - SL69uHantpO19muUhaueW6-PkYQh6VHFYGugGP1LpkfD-yzFNtiM3A==
-    body:
-      encoding: UTF-8
-      string: '{"methods":{"method":[{"_content":"flickr.activity.userComments"},{"_content":"flickr.activity.userPhotos"},{"_content":"flickr.auth.checkToken"},{"_content":"flickr.auth.getFrob"},{"_content":"flickr.auth.getFullToken"},{"_content":"flickr.auth.getToken"},{"_content":"flickr.auth.oauth.checkToken"},{"_content":"flickr.auth.oauth.getAccessToken"},{"_content":"flickr.blogs.getList"},{"_content":"flickr.blogs.getServices"},{"_content":"flickr.blogs.postPhoto"},{"_content":"flickr.cameras.getBrandModels"},{"_content":"flickr.cameras.getBrands"},{"_content":"flickr.collections.getInfo"},{"_content":"flickr.collections.getTree"},{"_content":"flickr.commons.getInstitutions"},{"_content":"flickr.contacts.getList"},{"_content":"flickr.contacts.getListRecentlyUploaded"},{"_content":"flickr.contacts.getPublicList"},{"_content":"flickr.contacts.getTaggingSuggestions"},{"_content":"flickr.favorites.add"},{"_content":"flickr.favorites.getContext"},{"_content":"flickr.favorites.getList"},{"_content":"flickr.favorites.getPublicList"},{"_content":"flickr.favorites.remove"},{"_content":"flickr.galleries.addPhoto"},{"_content":"flickr.galleries.create"},{"_content":"flickr.galleries.editMeta"},{"_content":"flickr.galleries.editPhoto"},{"_content":"flickr.galleries.editPhotos"},{"_content":"flickr.galleries.getInfo"},{"_content":"flickr.galleries.getList"},{"_content":"flickr.galleries.getListForPhoto"},{"_content":"flickr.galleries.getPhotos"},{"_content":"flickr.galleries.removePhoto"},{"_content":"flickr.groups.browse"},{"_content":"flickr.groups.discuss.replies.add"},{"_content":"flickr.groups.discuss.replies.delete"},{"_content":"flickr.groups.discuss.replies.edit"},{"_content":"flickr.groups.discuss.replies.getInfo"},{"_content":"flickr.groups.discuss.replies.getList"},{"_content":"flickr.groups.discuss.topics.add"},{"_content":"flickr.groups.discuss.topics.getInfo"},{"_content":"flickr.groups.discuss.topics.getList"},{"_content":"flickr.groups.getInfo"},{"_content":"flickr.groups.join"},{"_content":"flickr.groups.joinRequest"},{"_content":"flickr.groups.leave"},{"_content":"flickr.groups.members.getList"},{"_content":"flickr.groups.pools.add"},{"_content":"flickr.groups.pools.getContext"},{"_content":"flickr.groups.pools.getGroups"},{"_content":"flickr.groups.pools.getPhotos"},{"_content":"flickr.groups.pools.remove"},{"_content":"flickr.groups.search"},{"_content":"flickr.interestingness.getList"},{"_content":"flickr.machinetags.getNamespaces"},{"_content":"flickr.machinetags.getPairs"},{"_content":"flickr.machinetags.getPredicates"},{"_content":"flickr.machinetags.getRecentValues"},{"_content":"flickr.machinetags.getValues"},{"_content":"flickr.panda.getList"},{"_content":"flickr.panda.getPhotos"},{"_content":"flickr.people.findByEmail"},{"_content":"flickr.people.findByUsername"},{"_content":"flickr.people.getGroups"},{"_content":"flickr.people.getInfo"},{"_content":"flickr.people.getLimits"},{"_content":"flickr.people.getPhotos"},{"_content":"flickr.people.getPhotosOf"},{"_content":"flickr.people.getPublicGroups"},{"_content":"flickr.people.getPublicPhotos"},{"_content":"flickr.people.getUploadStatus"},{"_content":"flickr.photos.addTags"},{"_content":"flickr.photos.comments.addComment"},{"_content":"flickr.photos.comments.deleteComment"},{"_content":"flickr.photos.comments.editComment"},{"_content":"flickr.photos.comments.getList"},{"_content":"flickr.photos.comments.getRecentForContacts"},{"_content":"flickr.photos.delete"},{"_content":"flickr.photos.geo.batchCorrectLocation"},{"_content":"flickr.photos.geo.correctLocation"},{"_content":"flickr.photos.geo.getLocation"},{"_content":"flickr.photos.geo.getPerms"},{"_content":"flickr.photos.geo.photosForLocation"},{"_content":"flickr.photos.geo.removeLocation"},{"_content":"flickr.photos.geo.setContext"},{"_content":"flickr.photos.geo.setLocation"},{"_content":"flickr.photos.geo.setPerms"},{"_content":"flickr.photos.getAllContexts"},{"_content":"flickr.photos.getContactsPhotos"},{"_content":"flickr.photos.getContactsPublicPhotos"},{"_content":"flickr.photos.getContext"},{"_content":"flickr.photos.getCounts"},{"_content":"flickr.photos.getExif"},{"_content":"flickr.photos.getFavorites"},{"_content":"flickr.photos.getInfo"},{"_content":"flickr.photos.getNotInSet"},{"_content":"flickr.photos.getPerms"},{"_content":"flickr.photos.getPopular"},{"_content":"flickr.photos.getRecent"},{"_content":"flickr.photos.getSizes"},{"_content":"flickr.photos.getUntagged"},{"_content":"flickr.photos.getWithGeoData"},{"_content":"flickr.photos.getWithoutGeoData"},{"_content":"flickr.photos.licenses.getInfo"},{"_content":"flickr.photos.licenses.setLicense"},{"_content":"flickr.photos.notes.add"},{"_content":"flickr.photos.notes.delete"},{"_content":"flickr.photos.notes.edit"},{"_content":"flickr.photos.people.add"},{"_content":"flickr.photos.people.delete"},{"_content":"flickr.photos.people.deleteCoords"},{"_content":"flickr.photos.people.editCoords"},{"_content":"flickr.photos.people.getList"},{"_content":"flickr.photos.recentlyUpdated"},{"_content":"flickr.photos.removeTag"},{"_content":"flickr.photos.search"},{"_content":"flickr.photos.setContentType"},{"_content":"flickr.photos.setDates"},{"_content":"flickr.photos.setMeta"},{"_content":"flickr.photos.setPerms"},{"_content":"flickr.photos.setSafetyLevel"},{"_content":"flickr.photos.setTags"},{"_content":"flickr.photos.suggestions.approveSuggestion"},{"_content":"flickr.photos.suggestions.getList"},{"_content":"flickr.photos.suggestions.rejectSuggestion"},{"_content":"flickr.photos.suggestions.removeSuggestion"},{"_content":"flickr.photos.suggestions.suggestLocation"},{"_content":"flickr.photos.transform.rotate"},{"_content":"flickr.photos.upload.checkTickets"},{"_content":"flickr.photosets.addPhoto"},{"_content":"flickr.photosets.comments.addComment"},{"_content":"flickr.photosets.comments.deleteComment"},{"_content":"flickr.photosets.comments.editComment"},{"_content":"flickr.photosets.comments.getList"},{"_content":"flickr.photosets.create"},{"_content":"flickr.photosets.delete"},{"_content":"flickr.photosets.editMeta"},{"_content":"flickr.photosets.editPhotos"},{"_content":"flickr.photosets.getContext"},{"_content":"flickr.photosets.getInfo"},{"_content":"flickr.photosets.getList"},{"_content":"flickr.photosets.getPhotos"},{"_content":"flickr.photosets.orderSets"},{"_content":"flickr.photosets.removePhoto"},{"_content":"flickr.photosets.removePhotos"},{"_content":"flickr.photosets.reorderPhotos"},{"_content":"flickr.photosets.setPrimaryPhoto"},{"_content":"flickr.places.find"},{"_content":"flickr.places.findByLatLon"},{"_content":"flickr.places.getChildrenWithPhotosPublic"},{"_content":"flickr.places.getInfo"},{"_content":"flickr.places.getInfoByUrl"},{"_content":"flickr.places.getPlaceTypes"},{"_content":"flickr.places.getShapeHistory"},{"_content":"flickr.places.getTopPlacesList"},{"_content":"flickr.places.placesForBoundingBox"},{"_content":"flickr.places.placesForContacts"},{"_content":"flickr.places.placesForTags"},{"_content":"flickr.places.placesForUser"},{"_content":"flickr.places.resolvePlaceId"},{"_content":"flickr.places.resolvePlaceURL"},{"_content":"flickr.places.tagsForPlace"},{"_content":"flickr.prefs.getContentType"},{"_content":"flickr.prefs.getGeoPerms"},{"_content":"flickr.prefs.getHidden"},{"_content":"flickr.prefs.getPrivacy"},{"_content":"flickr.prefs.getSafetyLevel"},{"_content":"flickr.profile.getProfile"},{"_content":"flickr.push.getSubscriptions"},{"_content":"flickr.push.getTopics"},{"_content":"flickr.push.subscribe"},{"_content":"flickr.push.unsubscribe"},{"_content":"flickr.reflection.getMethodInfo"},{"_content":"flickr.reflection.getMethods"},{"_content":"flickr.stats.getCollectionDomains"},{"_content":"flickr.stats.getCollectionReferrers"},{"_content":"flickr.stats.getCollectionStats"},{"_content":"flickr.stats.getCSVFiles"},{"_content":"flickr.stats.getPhotoDomains"},{"_content":"flickr.stats.getPhotoReferrers"},{"_content":"flickr.stats.getPhotosetDomains"},{"_content":"flickr.stats.getPhotosetReferrers"},{"_content":"flickr.stats.getPhotosetStats"},{"_content":"flickr.stats.getPhotoStats"},{"_content":"flickr.stats.getPhotostreamDomains"},{"_content":"flickr.stats.getPhotostreamReferrers"},{"_content":"flickr.stats.getPhotostreamStats"},{"_content":"flickr.stats.getPopularPhotos"},{"_content":"flickr.stats.getTotalViews"},{"_content":"flickr.tags.getClusterPhotos"},{"_content":"flickr.tags.getClusters"},{"_content":"flickr.tags.getHotList"},{"_content":"flickr.tags.getListPhoto"},{"_content":"flickr.tags.getListUser"},{"_content":"flickr.tags.getListUserPopular"},{"_content":"flickr.tags.getListUserRaw"},{"_content":"flickr.tags.getMostFrequentlyUsed"},{"_content":"flickr.tags.getRelated"},{"_content":"flickr.test.echo"},{"_content":"flickr.test.login"},{"_content":"flickr.test.null"},{"_content":"flickr.testimonials.addTestimonial"},{"_content":"flickr.testimonials.approveTestimonial"},{"_content":"flickr.testimonials.deleteTestimonial"},{"_content":"flickr.testimonials.editTestimonial"},{"_content":"flickr.testimonials.getAllTestimonialsAbout"},{"_content":"flickr.testimonials.getAllTestimonialsAboutBy"},{"_content":"flickr.testimonials.getAllTestimonialsBy"},{"_content":"flickr.testimonials.getPendingTestimonialsAbout"},{"_content":"flickr.testimonials.getPendingTestimonialsAboutBy"},{"_content":"flickr.testimonials.getPendingTestimonialsBy"},{"_content":"flickr.testimonials.getTestimonialsAbout"},{"_content":"flickr.testimonials.getTestimonialsAboutBy"},{"_content":"flickr.testimonials.getTestimonialsBy"},{"_content":"flickr.urls.getGroup"},{"_content":"flickr.urls.getUserPhotos"},{"_content":"flickr.urls.getUserProfile"},{"_content":"flickr.urls.lookupGallery"},{"_content":"flickr.urls.lookupGroup"},{"_content":"flickr.urls.lookupUser"}]},"stat":"ok"}'
-  recorded_at: Thu, 19 May 2022 02:27:31 GMT
-- request:
-    method: post
-    uri: https://api.flickr.com/services/rest/
-    body:
-      encoding: US-ASCII
       string: user_id=33668819%40N03&per_page=20&page=1&method=flickr.people.getPhotos&format=json&nojsoncallback=1
     headers:
       Accept-Encoding:
@@ -66,11 +12,11 @@ http_interactions:
       Accept:
       - "*/*"
       User-Agent:
-      - Flickr/2.0.2 (+https://github.com/cyclotron3k/flickr)
+      - Flickr/2.1.0 (+https://github.com/cyclotron3k/flickr)
       Authorization:
-      - OAuth realm="https://api.flickr.com/services/rest/", oauth_consumer_key="<HIDDEN>",
-        oauth_nonce="<HIDDEN>", oauth_signature="<HIDDEN>%26",
-        oauth_signature_method="PLAINTEXT", oauth_timestamp="1652927251", oauth_token="",
+      - OAuth realm="https://api.flickr.com/services/rest/", oauth_consumer_key="06d068ffa30bffec9719b29457ee38bd",
+        oauth_nonce="9IBmDbL4z7wagz%2Fpq1IHdtdG8Ge26iz2l1%2BQJ76bc4k%3D", oauth_signature="d0030bbe1e6652e2%26",
+        oauth_signature_method="PLAINTEXT", oauth_timestamp="1655863770", oauth_token="",
         oauth_version="1.0"
       Content-Type:
       - application/x-www-form-urlencoded
@@ -88,12 +34,12 @@ http_interactions:
       Vary:
       - Accept-Encoding
       Date:
-      - Thu, 19 May 2022 02:27:31 GMT
+      - Wed, 22 Jun 2022 02:09:31 GMT
       Server:
       - Apache/2.4.53 (Ubuntu)
       Set-Cookie:
       - ccc=%7B%22needsConsent%22%3Afalse%2C%22managed%22%3A0%2C%22changed%22%3A0%2C%22info%22%3A%7B%22cookieBlock%22%3A%7B%22level%22%3A0%2C%22blockRan%22%3A0%7D%7D%7D;
-        expires=Sat, 18-Jun-2022 02:27:31 GMT; Max-Age=2592000; path=/; domain=.flickr.com
+        expires=Fri, 22-Jul-2022 02:09:30 GMT; Max-Age=2592000; path=/; domain=.flickr.com
       X-Content-Type-Options:
       - nosniff
       X-Frame-Options:
@@ -101,14 +47,14 @@ http_interactions:
       X-Cache:
       - Miss from cloudfront
       Via:
-      - 1.1 95edb2a6efdb5ee4d3c7f7aa298bb2f2.cloudfront.net (CloudFront)
+      - 1.1 3d81a5fb6988905cee1d06dfcada57dc.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - EWR53-P1
+      - LHR3-C2
       X-Amz-Cf-Id:
-      - Y0AqjBbZWOrhFg0YgUK4ZpPQTkWcewW5QGK-DP09LwZzHcchjZV1fg==
+      - zYfAYIpF-2QUVhhUwFayfwra5d0wieHSPK3TWb7SfysOsQJ4Ucfmfg==
     body:
       encoding: ASCII-8BIT
       string: '{"photos":{"page":1,"pages":6,"perpage":20,"total":120,"photo":[{"id":"49823443921","owner":"33668819@N03","secret":"1edf677c80","server":"65535","farm":66,"title":"DSC00092
         (1)","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823443776","owner":"33668819@N03","secret":"fab747ca5c","server":"65535","farm":66,"title":"DSC00234","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823764472","owner":"33668819@N03","secret":"30d9b9638c","server":"65535","farm":66,"title":"DSC00292","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823443521","owner":"33668819@N03","secret":"99374f9df5","server":"65535","farm":66,"title":"DSC00391","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49822923338","owner":"33668819@N03","secret":"a1c3d28c36","server":"65535","farm":66,"title":"A7300540","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823774267","owner":"33668819@N03","secret":"1d4b17d822","server":"65535","farm":66,"title":"A7300572","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823774222","owner":"33668819@N03","secret":"e755182efc","server":"65535","farm":66,"title":"A7300629","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823774062","owner":"33668819@N03","secret":"72c55d0438","server":"65535","farm":66,"title":"A7301115","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49822923008","owner":"33668819@N03","secret":"35ffbc50d1","server":"65535","farm":66,"title":"A7301228","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823773812","owner":"33668819@N03","secret":"4cf33c20e6","server":"65535","farm":66,"title":"A7301360","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49822922273","owner":"33668819@N03","secret":"b34cf6d495","server":"65535","farm":66,"title":"A7302913","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49822922093","owner":"33668819@N03","secret":"d43e1ccd15","server":"65535","farm":66,"title":"A7303027","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823452271","owner":"33668819@N03","secret":"608209e364","server":"65535","farm":66,"title":"A7303110","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823451786","owner":"33668819@N03","secret":"270b3ddc86","server":"65535","farm":66,"title":"A7303529","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823772132","owner":"33668819@N03","secret":"c870a9c844","server":"65535","farm":66,"title":"A7303832","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823771347","owner":"33668819@N03","secret":"28a73c2097","server":"65535","farm":66,"title":"A7304432","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823770887","owner":"33668819@N03","secret":"7d23e8183a","server":"65535","farm":66,"title":"A7304748","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823770772","owner":"33668819@N03","secret":"452ff87b18","server":"65535","farm":66,"title":"A7304944","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49822919438","owner":"33668819@N03","secret":"7e59d57fa1","server":"65535","farm":66,"title":"A7305160","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49822918883","owner":"33668819@N03","secret":"707ec3a094","server":"65535","farm":66,"title":"A7305697","ispublic":1,"isfriend":0,"isfamily":0}]},"stat":"ok"}'
-  recorded_at: Thu, 19 May 2022 02:27:31 GMT
+  recorded_at: Wed, 22 Jun 2022 02:09:31 GMT
 recorded_with: VCR 6.0.0
