--- a/spec/vcr_cassettes/FlickrService/total_pages/returns_the_total_number_of_pages_on_users_photostream.yml
+++ b/spec/vcr_cassettes/FlickrService/total_pages/returns_the_total_number_of_pages_on_users_photostream.yml
@@ -15,8 +15,8 @@ http_interactions:
       - Flickr/2.1.0 (+https://github.com/cyclotron3k/flickr)
       Authorization:
       - OAuth realm="https://api.flickr.com/services/rest/", oauth_consumer_key="06d068ffa30bffec9719b29457ee38bd",
-        oauth_nonce="9IBmDbL4z7wagz%2Fpq1IHdtdG8Ge26iz2l1%2BQJ76bc4k%3D", oauth_signature="d0030bbe1e6652e2%26",
-        oauth_signature_method="PLAINTEXT", oauth_timestamp="1655863770", oauth_token="",
+        oauth_nonce="lbv4Fs0N1b43iG92rV9R%2BH8DlcmUKNGKObBAhJT78%2Bc%3D", oauth_signature="d0030bbe1e6652e2%26",
+        oauth_signature_method="PLAINTEXT", oauth_timestamp="1692771457", oauth_token="",
         oauth_version="1.0"
       Content-Type:
       - application/x-www-form-urlencoded
@@ -34,12 +34,14 @@ http_interactions:
       Vary:
       - Accept-Encoding
       Date:
-      - Wed, 22 Jun 2022 02:09:31 GMT
+      - Wed, 23 Aug 2023 06:17:37 GMT
       Server:
-      - Apache/2.4.53 (Ubuntu)
+      - Apache/2.4.57 (Ubuntu)
       Set-Cookie:
-      - ccc=%7B%22needsConsent%22%3Afalse%2C%22managed%22%3A0%2C%22changed%22%3A0%2C%22info%22%3A%7B%22cookieBlock%22%3A%7B%22level%22%3A0%2C%22blockRan%22%3A0%7D%7D%7D;
-        expires=Fri, 22-Jul-2022 02:09:30 GMT; Max-Age=2592000; path=/; domain=.flickr.com
+      - ccc=%7B%22needsConsent%22%3Atrue%2C%22managed%22%3A0%2C%22changed%22%3A0%2C%22info%22%3A%7B%22cookieBlock%22%3A%7B%22level%22%3A0%2C%22blockRan%22%3A0%7D%7D%7D;
+        expires=Fri, 22-Sep-2023 06:17:37 GMT; Max-Age=2592000; path=/; domain=.flickr.com
+      - ccc=%7B%22needsConsent%22%3Atrue%2C%22managed%22%3A0%2C%22changed%22%3A0%2C%22info%22%3A%7B%22cookieBlock%22%3A%7B%22level%22%3A0%2C%22blockRan%22%3A1%7D%7D%7D;
+        expires=Fri, 22-Sep-2023 06:17:37 GMT; Max-Age=2592000; path=/; domain=.flickr.com
       X-Content-Type-Options:
       - nosniff
       X-Frame-Options:
@@ -47,14 +49,13 @@ http_interactions:
       X-Cache:
       - Miss from cloudfront
       Via:
-      - 1.1 3d81a5fb6988905cee1d06dfcada57dc.cloudfront.net (CloudFront)
+      - 1.1 3e720c4eaac99cf5867e4a8a49dc59ca.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - LHR3-C2
+      - LAX3-C4
       X-Amz-Cf-Id:
-      - zYfAYIpF-2QUVhhUwFayfwra5d0wieHSPK3TWb7SfysOsQJ4Ucfmfg==
+      - xui3JL4roEPOMcHEc2WFBk5kLtBZFzSc-ORn6y8VfnviSWFyUPrmwQ==
     body:
       encoding: ASCII-8BIT
-      string: '{"photos":{"page":1,"pages":6,"perpage":20,"total":120,"photo":[{"id":"49823443921","owner":"33668819@N03","secret":"1edf677c80","server":"65535","farm":66,"title":"DSC00092
-        (1)","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823443776","owner":"33668819@N03","secret":"fab747ca5c","server":"65535","farm":66,"title":"DSC00234","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823764472","owner":"33668819@N03","secret":"30d9b9638c","server":"65535","farm":66,"title":"DSC00292","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823443521","owner":"33668819@N03","secret":"99374f9df5","server":"65535","farm":66,"title":"DSC00391","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49822923338","owner":"33668819@N03","secret":"a1c3d28c36","server":"65535","farm":66,"title":"A7300540","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823774267","owner":"33668819@N03","secret":"1d4b17d822","server":"65535","farm":66,"title":"A7300572","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823774222","owner":"33668819@N03","secret":"e755182efc","server":"65535","farm":66,"title":"A7300629","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823774062","owner":"33668819@N03","secret":"72c55d0438","server":"65535","farm":66,"title":"A7301115","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49822923008","owner":"33668819@N03","secret":"35ffbc50d1","server":"65535","farm":66,"title":"A7301228","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823773812","owner":"33668819@N03","secret":"4cf33c20e6","server":"65535","farm":66,"title":"A7301360","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49822922273","owner":"33668819@N03","secret":"b34cf6d495","server":"65535","farm":66,"title":"A7302913","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49822922093","owner":"33668819@N03","secret":"d43e1ccd15","server":"65535","farm":66,"title":"A7303027","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823452271","owner":"33668819@N03","secret":"608209e364","server":"65535","farm":66,"title":"A7303110","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823451786","owner":"33668819@N03","secret":"270b3ddc86","server":"65535","farm":66,"title":"A7303529","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823772132","owner":"33668819@N03","secret":"c870a9c844","server":"65535","farm":66,"title":"A7303832","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823771347","owner":"33668819@N03","secret":"28a73c2097","server":"65535","farm":66,"title":"A7304432","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823770887","owner":"33668819@N03","secret":"7d23e8183a","server":"65535","farm":66,"title":"A7304748","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49823770772","owner":"33668819@N03","secret":"452ff87b18","server":"65535","farm":66,"title":"A7304944","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49822919438","owner":"33668819@N03","secret":"7e59d57fa1","server":"65535","farm":66,"title":"A7305160","ispublic":1,"isfriend":0,"isfamily":0},{"id":"49822918883","owner":"33668819@N03","secret":"707ec3a094","server":"65535","farm":66,"title":"A7305697","ispublic":1,"isfriend":0,"isfamily":0}]},"stat":"ok"}'
-  recorded_at: Wed, 22 Jun 2022 02:09:31 GMT
-recorded_with: VCR 6.0.0
+      string: '{"photos":{"page":1,"pages":8,"perpage":20,"total":160,"photo":[{"id":"53092344616","owner":"33668819@N03","secret":"86cfda251c","server":"65535","farm":66,"title":"DSCF4788","ispublic":1,"isfriend":0,"isfamily":0},{"id":"53092744445","owner":"33668819@N03","secret":"6ebf611f2c","server":"65535","farm":66,"title":"DSCF1953","ispublic":1,"isfriend":0,"isfamily":0},{"id":"53092744520","owner":"33668819@N03","secret":"bddb5c5f99","server":"65535","farm":66,"title":"DSCF1759","ispublic":1,"isfriend":0,"isfamily":0},{"id":"53092827953","owner":"33668819@N03","secret":"bed148df65","server":"65535","farm":66,"title":"DSCF1488","ispublic":1,"isfriend":0,"isfamily":0},{"id":"53092744835","owner":"33668819@N03","secret":"ba06abde43","server":"65535","farm":66,"title":"DSC03384","ispublic":1,"isfriend":0,"isfamily":0},{"id":"53092828973","owner":"33668819@N03","secret":"7bc40c8518","server":"65535","farm":66,"title":"DSC03214","ispublic":1,"isfriend":0,"isfamily":0},{"id":"53092828788","owner":"33668819@N03","secret":"56db042800","server":"65535","farm":66,"title":"DSC03016","ispublic":1,"isfriend":0,"isfamily":0},{"id":"53092828648","owner":"33668819@N03","secret":"f4d65a416a","server":"65535","farm":66,"title":"DSC02920","ispublic":1,"isfriend":0,"isfamily":0},{"id":"53092519774","owner":"33668819@N03","secret":"b69e1407e1","server":"65535","farm":66,"title":"A7309812","ispublic":1,"isfriend":0,"isfamily":0},{"id":"53092345121","owner":"33668819@N03","secret":"5da72d9fd0","server":"65535","farm":66,"title":"A7309768","ispublic":1,"isfriend":0,"isfamily":0},{"id":"53091774167","owner":"33668819@N03","secret":"896820f215","server":"65535","farm":66,"title":"A7309759","ispublic":1,"isfriend":0,"isfamily":0},{"id":"53091774337","owner":"33668819@N03","secret":"5ee1b42700","server":"65535","farm":66,"title":"A7309320","ispublic":1,"isfriend":0,"isfamily":0},{"id":"53091774407","owner":"33668819@N03","secret":"a1c84bbf43","server":"65535","farm":66,"title":"A7308321","ispublic":1,"isfriend":0,"isfamily":0},{"id":"53092520104","owner":"33668819@N03","secret":"6cb015db18","server":"65535","farm":66,"title":"A7307982","ispublic":1,"isfriend":0,"isfamily":0},{"id":"53092745485","owner":"33668819@N03","secret":"1fa8651096","server":"65535","farm":66,"title":"A7307082","ispublic":1,"isfriend":0,"isfamily":0},{"id":"53091774532","owner":"33668819@N03","secret":"301e0d157f","server":"65535","farm":66,"title":"A7307020","ispublic":1,"isfriend":0,"isfamily":0},{"id":"53092345681","owner":"33668819@N03","secret":"6845693d6a","server":"65535","farm":66,"title":"A7306410","ispublic":1,"isfriend":0,"isfamily":0},{"id":"53092520169","owner":"33668819@N03","secret":"f2ba559385","server":"65535","farm":66,"title":"A7306251","ispublic":1,"isfriend":0,"isfamily":0},{"id":"53091774877","owner":"33668819@N03","secret":"b243afb69e","server":"65535","farm":66,"title":"A7306036","ispublic":1,"isfriend":0,"isfamily":0},{"id":"53092520189","owner":"33668819@N03","secret":"fa95394a38","server":"65535","farm":66,"title":"A7305986","ispublic":1,"isfriend":0,"isfamily":0}]},"stat":"ok"}'
+  recorded_at: Wed, 23 Aug 2023 06:17:37 GMT
+recorded_with: VCR 6.2.0
