--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
     "core-js": "3.20.1",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^5.0.1",
-    "expose-loader": "^4.1.0",
+    "expose-loader": "^5.0.0",
     "file-loader": "^6.2.0",
     "fitvids": "1.0.2",
     "imagesloaded": "4.1.4",
     "infinite-scroll": "4.0.0",
-    "jquery": "^3.7.0",
+    "jquery": "^3.7.1",
     "marked": "4.0.10",
     "masonry-layout": "4.2.2",
-    "mini-css-extract-plugin": "^2.7.6",
+    "mini-css-extract-plugin": "^2.9.0",
     "photoswipe": "4.1.3",
     "postcss": "^8.4.31",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -47,7 +47,7 @@
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.3",
-    "terser-webpack-plugin": "^5.3.9",
+    "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.91.0",
     "webpack-assets-manifest": "^5.1.0",
     "webpack-cli": "^5.1.4",
@@ -68,6 +68,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   }
 }
