--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "marked": "4.0.10",
     "masonry-layout": "4.2.2",
     "mini-css-extract-plugin": "^2.7.6",
+    "path-to-regexp": "^0.1.12",
     "photoswipe": "4.1.3",
     "postcss": "^8.4.31",
     "postcss-flexbugs-fixes": "^5.0.2",
