--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,10 @@ services:
 
   # Rails web server
   web:
-    build: .
+    build:
+      context: .
+      args:
+        RAILS_ENV: development
     command: bash -lc "bundle exec rails s -b 0.0.0.0"
     volumes:
       - .:/app
@@ -44,7 +47,10 @@ services:
 
   # Shakapacker webpack-dev-server
   webpack:
-    build: .
+    build:
+      context: .
+      args:
+        RAILS_ENV: development
     # command: bash -lc "bin/shakapacker-dev-server --host 0.0.0.0"
     command: bash -lc "bin/shakapacker-dev-server"
     volumes:
