--- a/heroku.yml
+++ b/heroku.yml
@@ -3,6 +3,7 @@ build:
     web: Dockerfile
 
 release:
+  image: web
   command:
     - bundle exec rails db:migrate
     - bundle exec rails cache_warmer:flickr
